[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "MyPythonLibrary"
version = "1.2.0"
authors = [
    {name = "Mohammed Ayaz"}
]
description = "A personal Python utility library"
readme = "README.md"
requires-python = ">=3.10"
license = {file = "LICENSE"}

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]
