[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "ToolVerse"
version = "1.2.0"
description = "A personal Python utility library"
readme = "README.md"
requires-python = ">=3.10"

authors = [
    { name = "Mohammed Ayaz" }
]

license = { file = "LICENSE" }

keywords = [
    "python",
    "utilities",
    "calculator",
    "password-generator",
    "string-tools",
    "file-tools"
]

classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent"
]

dependencies = [
    "psutil"
]

[project.urls]
Homepage = "https://github.com/gaderjimrs-creator/MyPythonLibrary"
Repository = "https://github.com/gaderjimrs-creator/MyPythonLibrary"
Issues = "https://github.com/gaderjimrs-creator/MyPythonLibrary/issues"