[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "ToolVerse"
version = "1.2.1"
description = "A powerful Python utility library with calculator, string, file, password, random, system and utility tools."
readme = "README.md"
requires-python = ">=3.10"

authors = [
    { name = "Mohammed Ayaz" }
]

license = "MIT"

keywords = [
    "python",
    "utilities",
    "calculator",
    "password",
    "random",
    "file-tools",
    "string-tools",
    "student-tools",
    "system-tools"
]

classifiers = [
    "Programming Language :: Python :: 3",
    "Operating System :: OS Independent"
]

dependencies = [
    "psutil"
]

[project.urls]
Homepage = "https://github.com/gaderjimrs-creator/MyPythonLibrary"
Repository = "https://github.com/gaderjimrs-creator/MyPythonLibrary"
Issues = "https://github.com/gaderjimrs-creator/MyPythonLibrary/issues"